agregar métodos setCount y setResults a GutendexResponseDTO
- Completar getters y setters en GutendexResponseDTO
- Agregar método createEmptyResponse con Collections.emptyList()
- Corregir errores de compilación en GutendexClient